*********************************************************
*   History of changes for FreeRapid Downloader         *
*   WebSite: http://wordrider.net/freerapid             *
*   Mail: info@wordrider.net                            *
*********************************************************
Thanks to all individuals who reported bugs.

Legend :
Added - indicates new functionality or new part of distribution
Changed - indicates a change in using/behavior FreeRapid
Fixed - indicates a bug fix

September 2008 - FreeRapid Downloader 0.6 released
  Fixed : remove selected does not select next line in the table (if filter was applied)
  Fixed : partly downloaded files were not deleted at some special cases
  Changed : SwingX library upgraded to version 0.94
  Changed : property "Max downloads at a time" does not require a restart anymore
  Changed : show/hide toolbar action has assigned new shortcut - F11 
  Added : animated tray icon in busy state (optionable) 
  Added : clipboard monitoring (optionable)
  Added : frame title information (optionable)
  Added : ESC key cancels current download(s)
  Added : automatic smart saving current queue and downloaded files history
          (if application/OS crashes it preserves everything)
  Added : support for depositfiles.com
  Added : support for megaupload.com
  Added : support for netload.in
  Added : this file :-)

9th September 2008 - FreeRapid Downloader 0.5 released
  - initial release